--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 body {
-  background: #f9f7fe;
+  background: linear-gradient(
+    68.6deg,
+    rgb(252, 165, 241) 1.8%,
+    rgb(181, 255, 255) 100.5%
+  );
   font-family: "Roboto", sans-serif;
 }
 
@@ -8,7 +12,7 @@ a {
 }
 
 .weather-app {
-  background: white;
+  background: linear-gradient(to right, rgb(173, 83, 137), rgb(60, 16, 83));
   max-width: 600px;
   margin: 60px auto;
   padding: 30px;
@@ -59,9 +63,10 @@ main {
   font-size: 38px;
   font-weight: 900;
   margin: 0;
+  color: #fff;
 }
 .current-details {
-  color: rgba(39, 33, 66, 0.4);
+  color: rgba(50, 9, 234, 0.4);
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -81,12 +86,14 @@ main {
 .current-temperature-value {
   font-size: 80px;
   font-weight: bold;
+  color: #fff;
 }
 
 .current-temperature-unit {
   font-size: 28px;
   position: relative;
   top: -38px;
+  color: #fff;
 }
 
 footer {
