--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ a {
   max-width: 600px;
   margin: 60px auto;
   padding: 30px;
+  border: none;
   border-radius: 10px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
@@ -35,38 +36,49 @@ header {
   border-radius: 6px;
 }
 
-.search-button {
-  margin-left: 5px;
-  font-size: 16px;
-  background-color: #885df1;
+.material-symbols-outlined {
+  font-size: 40px;
   color: white;
-  border: none;
-  padding: 20px;
   line-height: 1;
-  border-radius: 5px;
 }
 
 main {
-  padding: 30px 0;
+  padding: 25px 0;
 }
 
 .current-temperature {
   font-size: 48px;
+  position: relative;
+  left: -55px;
+  top: -67px;
 }
 
 .current-weather {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+}
+
+#current-date {
+  display: block;
+  position: relative;
+  top: 120px;
+  left: -132px;
+  color: #fff;
+  font-size: 20px;
 }
 
 .current-city {
-  font-size: 38px;
+  position: relative;
+  right: -60px;
+  top: -15px;
+  font-size: 66px;
   font-weight: 900;
   margin: 0;
   color: #fff;
 }
 .current-details {
-  color: rgba(50, 9, 234, 0.4);
+  display: inline-block;
+  color: #c291f1;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -77,8 +89,8 @@ main {
 }
 
 .current-temperature-icon {
-  position: relative;
-  top: -8px;
+  /*position: relative;
+  top: -8px;*/
   font-size: 40px;
   margin-right: 10px;
 }
