--- a/index.css
+++ b/index.css
@@ -32,14 +32,25 @@ header {
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   padding: 20px;
-  width: 75%;
+  width: 98%;
   border-radius: 6px;
+  display: block;
+  margin: 0 auto;
 }
 
 .material-symbols-outlined {
   font-size: 40px;
-  color: white;
-  line-height: 1;
+  color: #541e5e;
+  position: absolute;
+  left: 685px;
+  top: 98px;
+}
+.material-symbols-outlined:hover {
+  border: 1px solid transparent;
+  background-color: #e8f0fe;
+
+  width: 100px;
+  border-radius: 5px;
 }
 
 main {
@@ -47,7 +58,7 @@ main {
 }
 
 .current-temperature {
-  font-size: 48px;
+  font-size: 40px;
   position: relative;
   left: -55px;
   top: -67px;
@@ -69,9 +80,9 @@ main {
 
 .current-city {
   position: relative;
-  right: -60px;
+  right: -17px;
   top: -15px;
-  font-size: 66px;
+  font-size: 46px;
   font-weight: 900;
   margin: 0;
   color: #fff;
@@ -91,12 +102,12 @@ main {
 .current-temperature-icon {
   /*position: relative;
   top: -8px;*/
-  font-size: 40px;
+  font-size: 30px;
   margin-right: 10px;
 }
 
 .current-temperature-value {
-  font-size: 80px;
+  font-size: 60px;
   font-weight: bold;
   color: #fff;
 }
