--- a/index.css
+++ b/index.css
@@ -1,18 +1,14 @@
 body {
-  background: linear-gradient(
-    68.6deg,
-    rgb(252, 165, 241) 1.8%,
-    rgb(181, 255, 255) 100.5%
-  );
+  background-color: #e8f0fe;
   font-family: "Roboto", sans-serif;
 }
 
 a {
-  color: #885df1;
+  color: #ffd800;
 }
 
 .weather-app {
-  background: linear-gradient(to right, rgb(173, 83, 137), rgb(60, 16, 83));
+  background-color: #2461e5;
   max-width: 600px;
   margin: 60px auto;
   padding: 30px;
@@ -29,7 +25,7 @@ header {
 .search-input {
   background-color: #f9f7fe;
   border: none;
-  color: rgba(39, 33, 66, 0.4);
+  color: #ffd800;
   font-size: 16px;
   padding: 20px;
   width: 98%;
@@ -40,14 +36,14 @@ header {
 
 .material-symbols-outlined {
   font-size: 40px;
-  color: #541e5e;
+  color: #2461e5;
   position: absolute;
-  left: 820px;
-  top: 98px;
+  left: 799px;
+  top: 99px;
 }
 .material-symbols-outlined:hover {
   border: 1px solid transparent;
-  background-color: #541e5e;
+  background-color: #2461e5;
   width: 80px;
   border-radius: 5px;
   color: #e8f0fe;
@@ -59,9 +55,10 @@ main {
 
 .current-temperature {
   font-size: 40px;
+  text-align: center;
   position: relative;
-  left: -24px;
-  top: -67px;
+  left: 42px;
+  top: 8px;
 }
 
 .current-weather {
@@ -72,36 +69,36 @@ main {
 #current-date {
   display: block;
   position: relative;
-  top: 120px;
-  left: -132px;
+  top: -18px;
+  left: -1px;
   color: #fff;
   font-size: 20px;
 }
 
 .current-city {
   position: relative;
-  right: -17px;
+  right: -157px;
   top: -15px;
   font-size: 46px;
   font-weight: 900;
-  margin: 0;
+  margin: -5px;
   color: #fff;
 }
 .current-details {
   display: inline-block;
-  color: #c291f1;
+  color: #ffd800;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
 }
 
 .current-details strong {
-  color: #f65282;
+  color: #fff;
 }
 
 .current-temperature-icon {
-  /*position: relative;
-  top: -8px;*/
+  position: relative;
+  top: -8px;
   font-size: 30px;
   margin-right: 10px;
 }
@@ -119,6 +116,21 @@ main {
   color: #fff;
 }
 
+ul {
+  list-style-type: none;
+  padding-top: 50px;
+  color: #fff;
+}
+
+li {
+  display: inline-block;
+  margin: 0;
+  padding: 10px;
+  font-size: 1em;
+}
+strong {
+  color: #ffd800;
+}
 footer {
   border-top: 1px solid #f9f7fe;
   text-align: center;
