--- a/index.css
+++ b/index.css
@@ -57,8 +57,8 @@ main {
   font-size: 40px;
   text-align: center;
   position: relative;
-  left: 42px;
-  top: 8px;
+  left: -21px;
+  top: -13px;
 }
 
 .current-weather {
@@ -77,8 +77,8 @@ main {
 
 .current-city {
   position: relative;
-  right: -59px;
-  top: -15px;
+  right: -13px;
+  top: 7px;
   font-size: 46px;
   font-weight: 900;
   margin: -5px;
@@ -94,6 +94,12 @@ main {
 
 .current-details strong {
   color: #fff;
+}
+
+.condition {
+  font-weight: bold;
+  font-size: 30px;
+  margin-left: 0;
 }
 
 .current-temperature-icon {
